--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
         <title>Instagram</title>
-
-
-
     </head>
+    <body>
 
 
+    </body>
 
 
 </html>
