--- a/index.html
+++ b/index.html
@@ -6,7 +6,20 @@
         <title>Instagram</title>
     </head>
     <body>
+        <div class="div instagram bedbox">
+            <div class="div instagram phone">
+                <img src=".img/instagram-cellphone.png">
+                <div class="div instagram continue">
 
+
+                </div>
+
+
+            </div>
+
+
+
+        </div>
 
     </body>
 
