--- a/index.html
+++ b/index.html
@@ -2,23 +2,27 @@
     <html lang='en'>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
         <title>Instagram</title>
     </head>
     <body>
         <div class="div instagram bedbox">
             <div class="div instagram phone">
-                <img src=".img/instagram-cellphone.png">
+                <img src="img/instagram-celular.png">
+                
                 <div class="div instagram continue">
-
-
+                    <div class="div group">
+                        <img src="img/instagram-logo.png" class="instagram-logo" alt="instagram-logo">
+                        
+                        <div class="profile.picture">
+                            <img src="img/foto_perfil.jpeg" class="profile-picture" alt="profile-photo">
+                        </div>
+                        <a href="#" class="instagram-login">Continue como euneto.r</a>
+                        <a href="#" class="instagram-logout">Remover conta</a>
+                    </div>
                 </div>
-
-
             </div>
-
-
-
         </div>
 
     </body>
