--- a/index.html
+++ b/index.html
@@ -21,11 +21,23 @@
                         <a href="#" class="instagram-login">Continue como euneto.r</a>
                         <a href="#" class="instagram-logout">Remover conta</a>
                     </div>
-                </div>
+                    <div class="group">
+                        <div class="not-account">Não é euneto.r?</div>
+                        <p class="notaccount">
+                            <span class="link-blue">Trocar de conta</span>
+                            ou
+                            <span class="link-blue">Inscreva-se</span>
+                        </p>
+                    </div>
+                    <div class="get-the-app">
+                        <p class="get-app">Baixe o aplicativo</p>
+                        <div class="download">
+                        <a href="#" class="app-download"></a>
+                        <a href="#" class="app-download"></a>
+                        </div>
+                    </div>
+                </div>     
             </div>
         </div>
-
     </body>
-
-
 </html>
