--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Instagram</title>
     </head>
     <body>
-        <div class="div instagram bedbox">
+        <div class="div instagram-bedbox">
             <div class="div instagram phone">
                 <img src="img/instagram-celular.png">
                 
