--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="div instagram-bedbox">
-            <div class="div instagram phone">
+            <div class="div instagram-phone">
                 <img src="img/instagram-celular.png">
                 
                 <div class="div instagram continue">
