alterações nas fotos

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                         <img src="img/instagram-logo.png" class="instagram-logo" alt="instagram-logo">
                         
                         <div class="profile.picture">
-                            <img src="img/foto_perfil.jpeg" class="profile-picture" alt="profile-photo">
+                            <img src="img/" class="profile-picture" alt="profile-photo">
                         </div>
                         <a href="#" class="instagram-login">Continue como euneto.r</a>
                         <a href="#" class="instagram-logout">Remover conta</a>
