--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>Instagram</title>
 </head>
 <body>
-    <div class="div instagram-bedbox">
-        <div class="div instagram-phone">
+    <div class="instagram-bedbox">
+        <div class="instagram-phone">
             <img src="img/instagram-celular.png">         
-            <div class="div instagram continue">
-                <div class="div group">
+            <div class="instagram-continue">
+                <div class="group">
                     <img src="img/instagram-logo.png" class="instagram-logo" alt="instagram-logo">   
-                    <div class="profile.picture">
+                    <div class="profile-picture">
                         <img src="img/" class="profile-picture" alt="profile-photo">
                     </div>
                     <a href="#" class="instagram-login">Continue como euneto.r</a>
