--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang='en'>
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Instagram</title>
@@ -9,33 +9,35 @@
 <body>
     <div class="instagram-bedbox">
         <div class="instagram-phone">
-            <img src="img/instagram-celular.png">         
+            <img src="img/instagram-celular.png" alt="celular">
+        </div>         
             <div class="instagram-continue">
                 <div class="group">
                     <img src="img/instagram-logo.png" class="instagram-logo" alt="instagram-logo">   
                     <div class="profile-picture">
-                        <img src="img/" class="profile-picture" alt="profile-photo">
+                        <img src="img/perfil-instagram.jpg" class="profile-picture" alt="profile-photo">
                     </div>
                     <a href="#" class="instagram-login">Continue como euneto.r</a>
                     <a href="#" class="instagram-logout">Remover conta</a>
                 </div>
                 <div class="group">
-                    <div class="not-account">Não é euneto.r?</div>
+                    <p class="not-account">Não é euneto.r?</p>
                     <p class="notaccount">
-                        <span class="link-blue">Trocar de conta</span>
+                        <span class="link-blue">Trocar de conta 
+                        </span>
                         ou
-                        <span class="link-blue">Inscreva-se</span>
+                        <span class="link-blue">Inscreva-se
+                        </span>
                     </p>
                 </div>
                 <div class="get-the-app">
                     <p class="get-app">Baixe o aplicativo</p>
                     <div class="download">
-                    <a href="#" class="app-download"></a>
-                    <a href="#" class="app-download"></a>
+                        <a href="#" class="app-download"></a>
+                        <a href="#" class="app-download"></a>
                     </div>
                 </div>
             </div>     
         </div>
-    </div>
 </body>
 </html>
