--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="group">
                     <p class="not-account">Não é euneto.r?</p>
-                    <p class="notaccount">
+                    <p class="not-account">
                         <span class="link-blue">Trocar de conta 
                         </span>
                         ou
